refactor: Gateway WebFlux 전환으로 WebSocket 지원
- Spring Cloud Gateway를 MVC에서 WebFlux 기반으로 변경
- JWT 인증 필터를 GlobalFilter로 마이그레이션