@@ -3,8 +3,9 @@ package com.ssafy.gatewayservice.config;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.cors.reactive.CorsConfigurationSource;
+import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
+import org.springframework.web.cors.reactive.CorsWebFilter;
 
 import java.util.Arrays;
 import java.util.List;
@@ -13,33 +14,19 @@ import java.util.List;
 public class CorsConfig {
 
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-
-        // 허용할 Origin (프론트엔드 URL)
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://localhost:3000",
-                "https://www.o-o.io.kr"
+    public CorsWebFilter corsWebFilter() {
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowedOrigins(Arrays.asList(
+                "https://www.o-o.io.kr",
+                "https://api.o-o.io.kr"
         ));
-
-        // 허용할 HTTP 메서드
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-
-        // 허용할 헤더
-        configuration.setAllowedHeaders(List.of("*"));
-
-        // 인증 정보 포함 허용
-        configuration.setAllowCredentials(true);
-
-        // 노출할 헤더
-        configuration.setExposedHeaders(Arrays.asList("Authorization", "X-USER-ID"));
-
-        // preflight 요청 캐시 시간 (초)
-        configuration.setMaxAge(3600L);
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of("*"));
+        config.setAllowCredentials(true);
+        config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-
-        return source;
+        source.registerCorsConfiguration("/**", config);
+        return new CorsWebFilter(source);
     }
 }
